GIFTS-163 : Fix dialog not properly shown on mobile devices

--- a/gifts-web/src/assets/styles/material-theme.scss
+++ b/gifts-web/src/assets/styles/material-theme.scss
@@ -128,7 +128,7 @@ body {
     margin: 0 !important;
   }
   mat-dialog-content.mat-dialog-content.gifts-dialog-content {
-    max-height: initial;
+    max-height: 70vh;
   }
 
   .gifts-modal-normal .mat-expansion-panel {
@@ -248,7 +248,7 @@ a.black {
 
 //modal action fix
 .gift-dialog-component{
-  height: 100%;
+  height: 90%;
   display: flex;
   flex-direction: column;
 }
